Fixed dropdown not working on mobile

--- a/docs/sass/misc.sass
+++ b/docs/sass/misc.sass
@@ -94,6 +94,7 @@ a
     display: none
 
   #mobileDrop
+    z-index: 3
     display: block
     float: right
     background-color: rgba(0,0,0,0)
@@ -110,21 +111,25 @@ a
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1), 0 2px 4px 0 rgba(0,0,0,0.1), 0 4px 8px 0 rgba(0,0,0,0.1)
   min-height: 214px
   border-radius: 2px
+  position: relative
+  header
+    z-index: 3
+    width: 100%
+    height: 56px
+    position: absolute
 
   article
     padding: 0
     margin: 0
     box-shadow: none
-
     header
-      background-color: white
-      color: #2f343f
       border-bottom: 1px solid rgba(0,0,0,0.1)
-
+      position: relative
       h3
         font-weight: 400
         color: #2f343f
-
+        z-index: 2
+        float: left
     h4
       font-weight: 500
       color: #212121
